# personalpcFAssistantAttempt

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  tasks.md
data/sample/: sample_receipt.txt
docs/: api.md  usage.md
scripts/: ingest_receipts.py  run_app.py
src/: main.py
src/budget/: budget_setup.py
src/chat/: intent.py  orchestrator.py
src/core/: __init__.py  models.py  persistence.py
src/llm/: adapter.py
src/persistence/: storage.py
src/receipt/: __init__.py  ocr.py  parser.py
src/services/: budgets.py  categories.py  receipts.py  transactions.py
src/spending/: __init__.py  tracker.py
src/utils/: categories.py
tests/: conftest.py  test_budget.py  test_budgets_service.py  test_integration.py  test_intents.py  test_onboarding.py  test_orchestrator.py  test_persistence.py  test_receipt.py  test_receipt_parser.py  test_spending.py  test_transactions.py
